Bug Fix - Side_Bar_Title_Link (Home) Button was transitioning later thant the other components when switching between light and dark modes

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -29,6 +29,7 @@ body {
 .Header, 
 .Side_Bar, 
 footer, 
+.Side_Bar_Title,
 .Side_Bar_Button {
     transition: background-color 0.3s ease, 
                 color 0.3s ease, 
